--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .link{
+        @apply cursor-pointer hover:underline;
+    }
+
+    .button{
+        @apply p-2 text-xs md:text-sm bg-gradient-to-b from-yellow-200 to-yellow-300 border rounded-lg hover:bg-gradient-to-b hover:from-yellow-200 hover:to-yellow-400 focus:bg-gradient-to-b focus:from-yellow-200 focus:to-yellow-300 ;
+    }
+}
